  * Linespacing added to the chat window, which makes it better readable.
  * You can turn local echo off in the preferences dialog.
  * The position of the divider between the chat and DX window is now saved.
  * You can now use highlights in the chat window. Highlights will produce
    colored text. Words to be highlighted can be set in the 'chat sidebar'.
    Colors can be set in page 3 of the preferences dialog.
  * The chat sidebar can be shown/hidden with F4.
  * You can disable automatic scrolling of the chat window by clicking in the
    window. Same for the DX window.
  * Parse of the DX cluster output has been improved. Xdx would sporadically
    miss DX messages.
  * A new about dialog has been added.
  * The manual now uses monospace font. It is now activated with F1.
  * Auto reconnect has been added. When activated through the settings menu,
    xdx will try to reconnect when the connection is broken. This code is
    somewhat experimental....
  * To keep track of your connections a connection log is kept. It can be
    viewed from the menu (Ctrl+l).
  * Xdx can send a keepalive packet every 5 minutes, which is useful for
    bad network connections. You must activate it in the settings dialog.
  * Sound support has been added. When a highlight is active in the chat
    window, a sound can be heard. You must use another program to play sound
    and set it in the first page of the preferences dialog.
  * Both ON4KST and DX-cluster prompts in the chat window are now colorized.
    The callsign is bold.

Changelog for version xdx (1.2)

  * Fixed compilation against GTK+ version 2.4.
  * Added spanish translations and manual by Baltasar Perez, EB8AKF. Thanks!
  * A new option added to the preferences dialog which allows showing/hiding
    of columns in the spots window.

Changelog for version xdx (1.1)
  * Correctly save preferences and history when selecting program->exit from
    the menu. This bug was reported by Wilbert Knol ZL2BSJ, thanks!